adds basic Insight functionality to the Browser for the address bar and anchor context menus
Change-Id: I38f8c8838b04f6ac602c19558e42aca70957ae04

--- a/res/menu/browsercontext.xml
+++ b/res/menu/browsercontext.xml
@@ -46,6 +46,8 @@
             android:title="@string/contextmenu_savelink"/>
         <item android:id="@+id/copy_link_context_menu_id"
             android:title="@string/contextmenu_copylink"/>
+        <item android:id="@+id/insight_item_id"
+              android:title="Insight"/>
     </group>
     <group android:id="@+id/IMAGE_MENU">
         <item android:id="@+id/download_context_menu_id"
